# bevy_game_test

./: Cargo.toml  bevy_game_test.d.ts  bevy_game_test.js  bevy_game_test_bg.wasm.d.ts  index.html
.github/workflows/: deploy.yml
src/: audio.rs  coin.rs  game_state.rs  main.rs  player.rs  score.rs  timer.rs  ui.rs
